# old-site

./: .gitignore  .gitlab-ci.yml  about.org  blog.cabal  blog.nix  default.nix  feeds.md  flake.nix  shell.nix  site.hs
.github/workflows/: hakyll.yml
css/: default.css
posts/: 2020-04-13-emacs-local-nix-environment.org  2020-05-23-Introduction-to-type-systems.md  2020-05-24-Simply-typed-lambda.lhs  2020-05-27-Polymorphic-lambda.lhs  2020-06-14-Type-inference.lhs
templates/: default.html  post-list.html  post.html  series.html
