name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 2.0

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll ^>=4.13
                  , pandoc ^>=2.7
                  , pandoc-types ^>=1.17
                  , containers ^>=0.6
  ghc-options:      -threaded
  default-language: Haskell2010
